--- a/CSS_Files/HomePage.css
+++ b/CSS_Files/HomePage.css
@@ -3,7 +3,7 @@ body {
     background-color: #009999;
     color: #fff;
     text-align: center;
-    padding: 5% 10%;
+    padding: 7% 0%;
     margin: 0;
 }
 
@@ -23,15 +23,14 @@ h2 {
 		-1px 1px 0 #000,
 		1px 1px 0 #000;
     margin-bottom: 1.5rem;
-    color: #aa0404;
+    color: #834040;
 }
 
 p {
     font-family: Helvetica;
     background-color: #757D82;
     font-size: 1.5rem;
-    line-height: 1.5;
-    margin-bottom: 2rem;
+    line-height: 1.2;
     padding: 2rem;
     float: left;
     color: white;
@@ -69,5 +68,5 @@ background-color: #111;
 }
 
 .active {
-background-color: #aa0404;
+background-color: orange;
 }
