--- a/CSS_Files/ContactUs.css
+++ b/CSS_Files/ContactUs.css
@@ -71,6 +71,37 @@ button:hover {
     background-color: #0056b3;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+li {
+float: left;
+}
+  
+li a {
+display: block;
+color: white;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+}
+
+li a:hover:not(.active) {
+background-color: #111;
+}
+
+.active {
+background-color: orange;
+}
+
 footer {
     text-align: center;
     padding: 20px;
