--- a/CSS_Files/ContactUs.css
+++ b/CSS_Files/ContactUs.css
@@ -60,7 +60,7 @@ textarea {
 
 button {
     padding: 10px 15px;
-    background-color: #007BFF;
+    background-color: #4CAF50;
     border: none;
     border-radius: 4px;
     color: white;
@@ -68,7 +68,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #45a049;
 }
 
 ul {
