--- a/CSS_Files/about.css
+++ b/CSS_Files/about.css
@@ -1,26 +1,68 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #009999;
-    color: #fff;
-    text-align: center;
-    padding: 0;
+    background-color: #f7f7f7;
     margin: 0;
+    padding: 0;
 }
-h2 {
-    font-size: 2rem;
-    text-shadow:
-    -1px -1px 0 #000,
-		1px -1px 0 #000,
-		-1px 1px 0 #000,
-		1px 1px 0 #000;
-    margin-bottom: 1.5rem;
-    color: #834040;
-}
-p {
-    font-family: Helvetica;
-    font-size: 1.5rem;
-    line-height: 1.2;
-    color: white;
-    margin-bottom: 1.5rem;
 
+.about-div {
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h2, h3 {
+    margin-top: 0;
+}
+
+p, ul {
+    margin-bottom: 20px;
+}
+
+ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+li {
+float: left;
+}
+  
+li a {
+display: block;
+color: white;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+}
+
+li a:hover:not(.active) {
+background-color: #111;
+}
+
+.active {
+background-color: orange;
 }
