--- a/CSS_Files/ContactUs.css
+++ b/CSS_Files/ContactUs.css
@@ -1,3 +1,7 @@
+/*
+Student 1: Ahmed Al-Qahtan, ID: 2046143
+Student 2: Mohannad Al-Jeddawi, ID: 2036459
+*/
 body {
     font-family: Arial, sans-serif;
     background-color: white;
