--- a/CSS_Files/calendar.css
+++ b/CSS_Files/calendar.css
@@ -1,3 +1,8 @@
+/*
+Student 1: Ahmed Al-Qahtan, ID: 2046143
+Student 2: Mohannad Al-Jeddawi, ID: 2036459
+*/
+
 * {box-sizing: border-box;}
 ul {list-style-type: none;}
 body {font-family: Verdana, sans-serif;}
