--- a/CSS_Files/style.css
+++ b/CSS_Files/style.css
@@ -1,3 +1,7 @@
+/*
+Student 1: Ahmed Al-Qahtan, ID: 2046143
+Student 2: Mohannad Al-Jeddawi, ID: 2036459
+*/
 /* CSS reset */
 body, h1, h2, p, ul, li, a {
     margin: 0;
