--- a/CSS_Files/TaskBar.css
+++ b/CSS_Files/TaskBar.css
@@ -20,11 +20,11 @@ header ul {
     width: 100%;
   }
   
-li {
+.h li {
 float: left;
 }
   
-li a {
+.h li a {
 display: block;
 color: white;
 text-align: center;
@@ -32,7 +32,7 @@ padding: 14px 16px;
 text-decoration: none;
 }
 
-li a:hover:not(.active) {
+.h li a:hover:not(.active) {
 background-color: #111;
 }
 
