--- a/CSS_Files/about.css
+++ b/CSS_Files/about.css
@@ -4,7 +4,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    background-color: #009999;
     margin: 0;
     padding: 0;
 }
@@ -15,8 +15,7 @@ body {
     padding: 20px;
     background-color: #ffffff;
     border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);}
 
 h2, h3 {
     margin-top: 0;
