--- a/CSS_Files/calendar.css
+++ b/CSS_Files/calendar.css
@@ -5,7 +5,10 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 
 * {box-sizing: border-box;}
 ul {list-style-type: none;}
-body {font-family: Verdana, sans-serif;}
+body {
+    font-family: Verdana, sans-serif;
+    background-color: white;
+}
 
 /* Month header */
 .month {
