--- a/CSS_Files/video-styles.css
+++ b/CSS_Files/video-styles.css
@@ -5,7 +5,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    background-color: #009999;
     margin: 0;
     padding: 0;
 }
@@ -16,7 +16,7 @@ body {
     margin: 40px auto;
     padding: 20px;
     background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);
     text-align: center;
     /* new contents for video below */
     /* display: flex; */
