--- a/CSS_Files/feedback-styles.css
+++ b/CSS_Files/feedback-styles.css
@@ -5,7 +5,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #e9ecef;
+    background-color: #009999;
     margin: 0;
     padding: 0;
 }
@@ -17,7 +17,7 @@ body {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);
 }
 
 form {
