--- a/CSS_Files/taskList.css
+++ b/CSS_Files/taskList.css
@@ -3,6 +3,9 @@ Student 1: Ahmed Al-Qahtan, ID: 2046143
 Student 2: Mohannad Al-Jeddawi, ID: 2036459
 */
 
+body {
+    background-color: #009999;
+}
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -24,12 +27,11 @@ td, th {
     padding: 20px;
     background-color: #ffffff;
     border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);}
 
 button {
     padding: 10px 15px;
-    background-color: #007BFF;
+    background-color: #4CAF50;
     border: none;
     border-radius: 4px;
     color: white;
@@ -46,5 +48,5 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #45a049;
 }
