--- a/CSS_Files/HomePage.css
+++ b/CSS_Files/HomePage.css
@@ -31,7 +31,7 @@ h2 {
     color: #834040;
 }
 
-p {
+#describe {
     font-family: Helvetica;
     background-color: #757D82;
     font-size: 1.5rem;
