--- a/CSS_Files/calendar.css
+++ b/CSS_Files/calendar.css
@@ -6,7 +6,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 * {box-sizing: border-box;}
 ul {list-style-type: none;}
 body {
-    font-family: Verdana, sans-serif;
+    font-family: Arial, sans-serif;
     background-color: white;
 }
 
