--- a/CSS_Files/feedback-styles.css
+++ b/CSS_Files/feedback-styles.css
@@ -4,7 +4,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 */
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, sans-serif;
     background-color: #009999;
     margin: 0;
     padding: 0;
