--- a/CSS_Files/ContactUs.css
+++ b/CSS_Files/ContactUs.css
@@ -2,6 +2,7 @@
 Student 1: Ahmed Al-Qahtan, ID: 2046143
 Student 2: Mohannad Al-Jeddawi, ID: 2036459
 */
+
 body {
     font-family: Arial, sans-serif;
     background-color: #009999;
@@ -62,25 +63,20 @@ textarea {
     border-radius: 4px;
 }
 
-button {
-    padding: 10px 15px;
+input[type="submit"] {
+    width: 100%;
     background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    margin-top: 20px;
     border: none;
     border-radius: 4px;
-    color: white;
     cursor: pointer;
+    font-size: 16px;
+    transition: color 0.3s;
 }
 
-button:hover {
+input[type="submit"]:hover {
     background-color: #45a049;
 }
 
-footer {
-    text-align: center;
-    padding: 20px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #333;
-    color: #fff;
-}
